# tinix-II

./: .gitignore  Cargo.toml  Makefile  README.md  storage.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  user_feedback.yaml
.github/workflows/: rust.yml
designs/: IO_Module Design.uxf  Tinix FS - Reference.md
src/: lib.rs
src/kernel/: fs.rs  mod.rs
src/kernel/arch/: gdt.rs  idt.rs  mod.rs
src/kernel/arch/x64/: gdt.rs  idt.rs  mod.rs
src/kernel/arch/x64/mem/: allocator.rs  heap.rs  mapper.rs  mod.rs
src/kernel/config/: mem.toml
src/kernel/drivers/: file_systems.rs  mod.rs  ram_fs.rs  vga.rs  vga_dr.rs
src/kernel/drivers/file_systems/: ustar.rs
src/kernel/drivers/file_systems/file_table/: file.rs  mod.rs
src/kernel/hardware/: ata.rs  cmos.rs  mod.rs  pic.rs  pit.rs  uart.rs  vga.rs  vga_hw.rs
src/std/: mod.rs
src/std/c/: mem.rs  mod.rs  stdio.rs
src/user/: fs.rs  graphics.rs  input.rs  math.rs  mod.rs  storage.rs  sys.rs  time.rs
src/user/graphics/: widgets.rs
src/user/graphics/widgets/: label.rs  progress_bar.rs
src/user/io/: mod.rs
src/user/io/devices/: console.rs  keyboard.rs  mod.rs  serial.rs
