[package]
name = "tinix"
version = "0.10.3"
edition = "2018"

default = ["gfx640x480"]


[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
x86_64 = "0.14.3"
bit_field = "0.10.1"
spin = {version = "0.9.0"}
volatile = "*"
vga = "0.2.7"
pic8259 = "0.10.0"
uart_16550 = "0.2.15"
pc-keyboard = "*"
linked_list_allocator = "*"


[dependencies.serde]
version = "1.0.126"
default-features = false


[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[features]
libcore = ["liballoc"]
liballoc = []
gfx640x480 = []
HEAP128 = []
HEAP32 = []
HEAP16 = []
HEAP2 = []

DOS = ["libcore", "HEAP2"]


default = ["DOS"]

[package.metadata.bootimage]
run-args = [
    "-d", "cpu_reset",
    "-m", "2048",
    "-serial","stdio"
]

test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
